# test

test/: README.md  assistant_config.yml  ipport.py  main_base_assistant.py  network_diagnostic_skills.py  pyproject.toml  voice_assistant_enhanced(1).py  voice_assistant_enhanced.py  webui.py
test/appimage/: AppRun  ada.desktop  build_appimage.sh
test/commands/: template.py  template_empty.py
test/modules/: __main__.py  base_assistant.py  celery_app.py  gemini.py  groq.py  ipport_wrapper.py  mistral.py  network_skills_wrapper.py  root_cli.py  security_tools.py  settings_manager.py  tasks.py  typer_agent.py  voice_listener.py  webui_launcher.py
